Keep improving the metadata.

--- a/xcp_d/data/boilerplate.bib
+++ b/xcp_d/data/boilerplate.bib
@@ -658,3 +658,15 @@ Publisher: Nature Publishing Group},
   year={2016},
   publisher={Sage Publications Sage CA: Los Angeles, CA}
 }
+
+@article{vijaymeena2016survey,
+  title={A survey on similarity measures in text mining},
+  author={Vijaymeena, MK and Kavitha, K},
+  journal={Machine Learning and Applications: An International Journal},
+  volume={3},
+  number={2},
+  pages={19--28},
+  year={2016},
+  url={https://doi.org/10.5121/mlaij.2016.3103},
+  doi={10.5121/mlaij.2016.3103}
+}
