Add Eggebrecht paper to boilerplate.

--- a/xcp_d/data/boilerplate.bib
+++ b/xcp_d/data/boilerplate.bib
@@ -526,7 +526,9 @@ Publisher: Nature Publishing Group},
   author={Feczko, Eric and Conan, Greg and Marek, Scott and Tervo-Clemmens, Brenden and Cordova, Michaela and Doyle, Olivia and Earl, Eric and Perrone, Anders and Sturgeon, Darrick and Klein, Rachel and others},
   journal={bioRxiv},
   year={2021},
-  publisher={Cold Spring Harbor Laboratory}
+  publisher={Cold Spring Harbor Laboratory},
+  url={https://doi.org/10.1101/2021.07.09.451638},
+  doi={10.1101/2021.07.09.451638}
 }
 
 @article{gratton2020removal,
@@ -669,4 +671,17 @@ Publisher: Nature Publishing Group},
   year={2016},
   url={https://doi.org/10.5121/mlaij.2016.3103},
   doi={10.5121/mlaij.2016.3103}
+}
+
+@article{eggebrecht2017joint,
+  title={Joint attention and brain functional connectivity in infants and toddlers},
+  author={Eggebrecht, Adam T and Elison, Jed T and Feczko, Eric and Todorov, Alexandre and Wolff, Jason J and Kandala, Sridhar and Adams, Chloe M and Snyder, Abraham Z and Lewis, John D and Estes, Annette M and others},
+  journal={Cerebral Cortex},
+  volume={27},
+  number={3},
+  pages={1709--1720},
+  year={2017},
+  publisher={Oxford University Press},
+  url={https://doi.org/10.1093/cercor/bhw403},
+  doi={10.1093/cercor/bhw403}
 }
