--- a/xcp_d/data/boilerplate.bib
+++ b/xcp_d/data/boilerplate.bib
@@ -685,3 +685,42 @@ Publisher: Nature Publishing Group},
   url={https://doi.org/10.1093/cercor/bhw403},
   doi={10.1093/cercor/bhw403}
 }
+
+@article{pauli2018high,
+  title={A high-resolution probabilistic in vivo atlas of human subcortical brain nuclei},
+  author={Pauli, Wolfgang M and Nili, Amanda N and Tyszka, J Michael},
+  journal={Scientific data},
+  volume={5},
+  number={1},
+  pages={1--13},
+  year={2018},
+  publisher={Nature Publishing Group},
+  url={https://doi.org/10.1038/sdata.2018.63},
+  doi={10.1038/sdata.2018.63}
+}
+
+@article{king2019functional,
+  title={Functional boundaries in the human cerebellum revealed by a multi-domain task battery},
+  author={King, Maedbh and Hernandez-Castillo, Carlos R and Poldrack, Russell A and Ivry, Richard B and Diedrichsen, J{\"o}rn},
+  journal={Nature neuroscience},
+  volume={22},
+  number={8},
+  pages={1371--1378},
+  year={2019},
+  publisher={Nature Publishing Group US New York},
+  url={https://doi.org/10.1038/s41593-019-0436-x},
+  doi={10.1038/s41593-019-0436-x}
+}
+
+@article{najdenovska2018vivo,
+  title={In-vivo probabilistic atlas of human thalamic nuclei based on diffusion-weighted magnetic resonance imaging},
+  author={Najdenovska, Elena and Alem{\'a}n-G{\'o}mez, Yasser and Battistella, Giovanni and Descoteaux, Maxime and Hagmann, Patric and Jacquemont, Sebastien and Maeder, Philippe and Thiran, Jean-Philippe and Fornari, Eleonora and Bach Cuadra, Meritxell},
+  journal={Scientific data},
+  volume={5},
+  number={1},
+  pages={1--11},
+  year={2018},
+  publisher={Nature Publishing Group},
+  url={https://doi.org/10.1038/sdata.2018.270},
+  doi={10.1038/sdata.2018.270}
+}
