Change "ciftiSubcortical" atlas name to "HCP".

--- a/xcp_d/data/boilerplate.bib
+++ b/xcp_d/data/boilerplate.bib
@@ -209,7 +209,7 @@ Publisher: Nature Publishing Group},
 	file = {Accepted Version:/Users/adebimpe/Zotero/storage/2GWXNAAS/Power et al. - 2014 - Methods to detect, characterize, and remove motion.pdf:application/pdf},
 }
 
-@article{hcppipelines,
+@article{glasser2013minimal,
 	title = {The minimal preprocessing pipelines for the {Human} {Connectome} {Project}},
 	volume = {80},
 	issn = {1095-9572},
