--- a/xcp_d/data/boilerplate.bib
+++ b/xcp_d/data/boilerplate.bib
@@ -724,3 +724,14 @@ Publisher: Nature Publishing Group},
   url={https://doi.org/10.1038/sdata.2018.270},
   doi={10.1038/sdata.2018.270}
 }
+
+@article{miller2016multimodal,
+  title={Multimodal population brain imaging in the UK Biobank prospective epidemiological study},
+  author={Miller, Karla L and Alfaro-Almagro, Fidel and Bangerter, Neal K and Thomas, David L and Yacoub, Essa and Xu, Junqian and Bartsch, Andreas J and Jbabdi, Saad and Sotiropoulos, Stamatios N and Andersson, Jesper LR and others},
+  journal={Nature neuroscience},
+  volume={19},
+  number={11},
+  pages={1523--1536},
+  year={2016},
+  publisher={Nature Publishing Group US New York}
+}
