--- a/xcp_d/data/boilerplate.bib
+++ b/xcp_d/data/boilerplate.bib
@@ -724,3 +724,41 @@ Publisher: Nature Publishing Group},
   url={https://doi.org/10.1038/sdata.2018.270},
   doi={10.1038/sdata.2018.270}
 }
+
+@Conference{taylorlomb,
+  title={Lomb-Scargle your way to RSFC parameter estimation in AFNI-FATCAT},
+  author={Taylor, Paul A and Chen, Gang and Glen, Daniel R and Reynolds, Richard C and Cox, Robert W},
+  year={2018},
+  organization={International Society for Magnetic Resonance in Medicine},
+  note={Description of Lomb-Scargle applied to scrubbed fMRI data in AFNI.}
+}
+
+@article{lomb1976least,
+  title={Least-squares frequency analysis of unequally spaced data},
+  author={Lomb, Nicholas R},
+  journal={Astrophysics and space science},
+  volume={39},
+  pages={447--462},
+  year={1976},
+  publisher={Springer}
+}
+
+@article{scargle1982studies,
+  title={Studies in astronomical time series analysis. II-Statistical aspects of spectral analysis of unevenly spaced data},
+  author={Scargle, Jeffrey D},
+  journal={Astrophysical Journal, Part 1, vol. 263, Dec. 15, 1982, p. 835-853.},
+  volume={263},
+  pages={835--853},
+  year={1982}
+}
+
+@article{townsend2010fast,
+  title={Fast calculation of the Lomb--Scargle periodogram using graphics processing units},
+  author={Townsend, RHD},
+  journal={The Astrophysical Journal Supplement Series},
+  volume={191},
+  number={2},
+  pages={247},
+  year={2010},
+  publisher={IOP Publishing}
+}
