--- a/xcp_d/data/boilerplate.bib
+++ b/xcp_d/data/boilerplate.bib
@@ -725,7 +725,7 @@ Publisher: Nature Publishing Group},
   doi={10.1038/sdata.2018.270}
 }
 
-@Conference{taylorlomb,
+@article{taylorlomb,
   title={Lomb-Scargle your way to RSFC parameter estimation in AFNI-FATCAT},
   author={Taylor, Paul A and Chen, Gang and Glen, Daniel R and Reynolds, Richard C and Cox, Robert W},
   year={2018},
