--- a/xcp_d/data/boilerplate.bib
+++ b/xcp_d/data/boilerplate.bib
@@ -730,6 +730,7 @@ Publisher: Nature Publishing Group},
   author={Taylor, Paul A and Chen, Gang and Glen, Daniel R and Reynolds, Richard C and Cox, Robert W},
   year={2018},
   organization={International Society for Magnetic Resonance in Medicine},
+  journal={International Society for Magnetic Resonance in Medicine},
   note={Description of Lomb-Scargle applied to scrubbed fMRI data in AFNI.}
 }
 
