--- a/xcp_d/data/boilerplate.bib
+++ b/xcp_d/data/boilerplate.bib
@@ -763,3 +763,14 @@ Publisher: Nature Publishing Group},
   year={2010},
   publisher={IOP Publishing}
 }
+
+@article{yu2007altered,
+  title={Altered baseline brain activity in children with ADHD revealed by resting-state functional MRI},
+  author={Yu-Feng, Zang and Yong, He and Chao-Zhe, Zhu and Qing-Jiu, Cao and Man-Qiu, Sui and Meng, Liang and Li-Xia, Tian and Tian-Zi, Jiang and Yu-Feng, Wang},
+  journal={Brain and Development},
+  volume={29},
+  number={2},
+  pages={83--91},
+  year={2007},
+  publisher={Elsevier}
+}
