Add options for UK Biobank data (#1022)

--- a/xcp_d/data/boilerplate.bib
+++ b/xcp_d/data/boilerplate.bib
@@ -725,6 +725,17 @@ Publisher: Nature Publishing Group},
   doi={10.1038/sdata.2018.270}
 }
 
+@article{miller2016multimodal,
+  title={Multimodal population brain imaging in the UK Biobank prospective epidemiological study},
+  author={Miller, Karla L and Alfaro-Almagro, Fidel and Bangerter, Neal K and Thomas, David L and Yacoub, Essa and Xu, Junqian and Bartsch, Andreas J and Jbabdi, Saad and Sotiropoulos, Stamatios N and Andersson, Jesper LR and others},
+  journal={Nature neuroscience},
+  volume={19},
+  number={11},
+  pages={1523--1536},
+  year={2016},
+  publisher={Nature Publishing Group US New York}
+}
+
 @article{taylorlomb,
   title={Lomb-Scargle your way to RSFC parameter estimation in AFNI-FATCAT},
   author={Taylor, Paul A and Chen, Gang and Glen, Daniel R and Reynolds, Richard C and Cox, Robert W},
