Improve the documentation.

--- a/xcp_d/data/boilerplate.bib
+++ b/xcp_d/data/boilerplate.bib
@@ -785,3 +785,16 @@ Publisher: Nature Publishing Group},
   year={2007},
   publisher={Elsevier}
 }
+
+@article{lindquist2019modular,
+  title={Modular preprocessing pipelines can reintroduce artifacts into fMRI data},
+  author={Lindquist, Martin A and Geuter, Stephan and Wager, Tor D and Caffo, Brian S},
+  journal={Human brain mapping},
+  volume={40},
+  number={8},
+  pages={2358--2376},
+  year={2019},
+  publisher={Wiley Online Library},
+  url={https://doi.org/10.1002/hbm.24528},
+  doi={10.1002/hbm.24528}
+}
