--- a/xcp_d/data/boilerplate.bib
+++ b/xcp_d/data/boilerplate.bib
@@ -798,3 +798,14 @@ Publisher: Nature Publishing Group},
   url={https://doi.org/10.1002/hbm.24528},
   doi={10.1002/hbm.24528}
 }
+
+@article{mathias2004algorithms,
+  title={Algorithms for spectral analysis of irregularly sampled time series},
+  author={Mathias, Adolf and Grond, Florian and Guardans, Ramon and Seese, Detlef and Canela, Miguel and Diebner, Hans H},
+  journal={Journal of Statistical Software},
+  volume={11},
+  pages={1--27},
+  year={2004},
+  url={https://doi.org/10.18637/jss.v011.i02},
+  doi={10.18637/jss.v011.i02}
+}
