Describe the major differences.

--- a/xcp_d/data/boilerplate.bib
+++ b/xcp_d/data/boilerplate.bib
@@ -798,3 +798,15 @@ Publisher: Nature Publishing Group},
   url={https://doi.org/10.1002/hbm.24528},
   doi={10.1002/hbm.24528}
 }
+
+@article{afyouni2019effective,
+  title={Effective degrees of freedom of the Pearson's correlation coefficient under autocorrelation},
+  author={Afyouni, Soroosh and Smith, Stephen M and Nichols, Thomas E},
+  journal={NeuroImage},
+  volume={199},
+  pages={609--625},
+  year={2019},
+  publisher={Elsevier},
+  url={https://doi.org/10.1016/j.neuroimage.2019.05.011},
+  doi={10.1016/j.neuroimage.2019.05.011}
+}
