--- a/xcp_d/data/boilerplate.bib
+++ b/xcp_d/data/boilerplate.bib
@@ -798,3 +798,14 @@ Publisher: Nature Publishing Group},
   url={https://doi.org/10.1002/hbm.24528},
   doi={10.1002/hbm.24528}
 }
+
+@article{hermosillo2022precision,
+  title={A precision functional atlas of network probabilities and individual-specific network topography},
+  author={Hermosillo, Robert JM and Moore, Lucille A and Fezcko, Eric and Dworetsky, Ally and Pines, Adam and Conan, Gregory and Mooney, Michael A and Randolph, Anita and Adeyemo, Babatunde and Earl, Eric and others},
+  journal={bioRxiv},
+  pages={2022--01},
+  year={2022},
+  publisher={Cold Spring Harbor Laboratory},
+  url={https://doi.org/10.1101/2022.01.12.475422},
+  doi={10.1101/2022.01.12.475422}
+}
