Add Myers-Labonte atlas.

--- a/xcp_d/data/boilerplate.bib
+++ b/xcp_d/data/boilerplate.bib
@@ -809,3 +809,13 @@ Publisher: Nature Publishing Group},
   url={https://doi.org/10.1101/2022.01.12.475422},
   doi={10.1101/2022.01.12.475422}
 }
+
+@article{myers2023functional,
+  title={Functional parcellation of the neonatal brain},
+  author={Myers, Michael J and Labonte, Alyssa K and Gordon, Evan M and Laumann, Timothy O and Tu, Jiaxin Cindy and Wheelock, Muriah D and Nielsen, Ashley N and Schwarzlose, Rebecca and Camacho, M Catalina and Warner, Barbara B and others},
+  journal={bioRxiv},
+  year={2023},
+  publisher={Cold Spring Harbor Laboratory Preprints},
+  url={https://doi.org/10.1101/2023.11.10.566629},
+  doi={10.1101/2023.11.10.566629}
+}
