Update the XCP-D citation.

--- a/xcp_d/data/boilerplate.bib
+++ b/xcp_d/data/boilerplate.bib
@@ -1,3 +1,14 @@
+@article{mehta2024xcp,
+  title={XCP-D: A Robust Pipeline for the post-processing of fMRI data},
+  author={Mehta, Kahini and Salo, Taylor and Madison, Thomas J and Adebimpe, Azeez and Bassett, Danielle S and Bertolero, Max and Cieslak, Matthew and Covitz, Sydney and Houghton, Audrey and Keller, Arielle S and others},
+  journal={Imaging Neuroscience},
+  volume={2},
+  pages={1--26},
+  year={2024},
+  publisher={MIT Press},
+  url={https://doi.org/10.1162/imag_a_00257},
+  doi={10.1162/imag_a_00257}
+}
 
 @article{satterthwaite_2013,
 	title = {An improved framework for confound regression and filtering for control of motion artifact in the preprocessing of resting-state functional connectivity data},
