Update citation for MIDB atlas.

--- a/xcp_d/data/boilerplate.bib
+++ b/xcp_d/data/boilerplate.bib
@@ -809,15 +809,17 @@ Publisher: Nature Publishing Group},
   doi={10.1002/hbm.24528}
 }
 
-@article{hermosillo2022precision,
-  title={A precision functional atlas of network probabilities and individual-specific network topography},
-  author={Hermosillo, Robert JM and Moore, Lucille A and Fezcko, Eric and Dworetsky, Ally and Pines, Adam and Conan, Gregory and Mooney, Michael A and Randolph, Anita and Adeyemo, Babatunde and Earl, Eric and others},
-  journal={bioRxiv},
-  pages={2022--01},
-  year={2022},
-  publisher={Cold Spring Harbor Laboratory},
-  url={https://doi.org/10.1101/2022.01.12.475422},
-  doi={10.1101/2022.01.12.475422}
+@article{hermosillo2024precision,
+  title={A precision functional atlas of personalized network topography and probabilities},
+  author={Hermosillo, Robert JM and Moore, Lucille A and Feczko, Eric and Miranda-Dom{\'\i}nguez, {\'O}scar and Pines, Adam and Dworetsky, Ally and Conan, Gregory and Mooney, Michael A and Randolph, Anita and Graham, Alice and others},
+  journal={Nature neuroscience},
+  volume={27},
+  number={5},
+  pages={1000--1013},
+  year={2024},
+  publisher={Nature Publishing Group US New York},
+  url={https://doi.org/10.1038/s41593-024-01596-5},
+  doi={10.1038/s41593-024-01596-5}
 }
 
 @article{myers2023functional,
