Draft PerAF method.

--- a/xcp_d/data/boilerplate.bib
+++ b/xcp_d/data/boilerplate.bib
@@ -843,3 +843,16 @@ Publisher: Nature Publishing Group},
   url={https://doi.org/10.1016/j.neuroimage.2019.05.011},
   doi={10.1016/j.neuroimage.2019.05.011}
 }
+
+@article{jia2020percent,
+  title={Percent amplitude of fluctuation: a simple measure for resting-state fMRI signal at single voxel level},
+  author={Jia, Xi-Ze and Sun, Jia-Wei and Ji, Gong-Jun and Liao, Wei and Lv, Ya-Ting and Wang, Jue and Wang, Ze and Zhang, Han and Liu, Dong-Qiang and Zang, Yu-Feng},
+  journal={Plos one},
+  volume={15},
+  number={1},
+  pages={e0227021},
+  year={2020},
+  publisher={Public Library of Science San Francisco, CA USA},
+  url={https://doi.org/10.1371/journal.pone.0227021},
+  doi={10.1371/journal.pone.0227021}
+}
